Create a React app and publish it to GitHub Pages.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Dario-Felipe/FindMovies",
+  "homepage": "https://dario-felipe.github.com/FindMovies",
   "name": "findmovies",
   "version": "0.1.0",
   "private": true,
