--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dario-felipe.github.com/FindMovies",
+  "homepage": "https://dario-felipe.github.io/FindMovies",
   "name": "findmovies",
   "version": "0.1.0",
   "private": true,
